# axum-boilerplate

./: .env.example  .gitignore  Cargo.toml
migrations/: 20250818040700_users_table.sql  20250818040711_categories_table.sql  20250818040716_products_table.sql
src/: container.rs  lib.rs  main.rs  route.rs
src/features/: mod.rs
src/features/auth/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
src/features/user/: model.rs  repository.rs  service.rs
src/services/: concurrency_limit.rs  logger.rs  mod.rs  rate_limit.rs
src/utils/: api_response.rs  db.rs  hash_pass.rs  jwt.rs  middleware.rs  mod.rs
tests/: test.rs
